# Spektrafilm-android

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  NOTICE.md  README.md  build.gradle.kts  debug.keystore  gradle.properties  settings.gradle.kts
engine/spektra-core/src/main/cpp/: CMakeLists.txt  spektra.cpp  spektra.h  spektra_jni.cpp
engine/spektra-core/src/main/cpp/gpu/: cctf_encode.comp  cctf_encode_spv.h  cctf_encode_spv.inc  scan_spectral.comp  scan_spectral_spv.h  scan_spectral_spv.inc  vulkan_compute.cpp  vulkan_compute.h
engine/spektra-core/src/main/cpp/io/: npy_lut.cpp  npy_lut.h
engine/spektra-core/src/main/cpp/kernels/: exp10.h  exponential_filter.cpp  exponential_filter.h  gaussian.cpp  gaussian.h  half.cpp  half.h  interp.cpp  interp.h  lut3d.cpp  lut3d.h  parallel.cpp  parallel.h  spectral_upsampling.cpp  spectral_upsampling.h  stats.cpp  stats.h  tonecurve.cpp  tonecurve.h
engine/spektra-core/src/main/cpp/ml/: segmentation.cpp  segmentation.h
engine/spektra-core/src/main/cpp/model/: color_filters.cpp  color_filters.h  color_output.cpp  color_output.h  conversions.cpp  conversions.h  couplers.cpp  couplers.h  density_curves.cpp  density_curves.h  diffusion.cpp  diffusion.h  emulsion.cpp  emulsion.h  gamut_compression.cpp  gamut_compression.h  glare.cpp  glare.h  grain.cpp  grain.h  morph_curves.cpp  morph_curves.h  spectral.cpp  spectral.h
engine/spektra-core/src/main/cpp/profiles/: json_min.h  profile.cpp  profile.h
engine/spektra-core/src/main/cpp/runtime/: color_reference.cpp  color_reference.h  params.cpp  params.h  print_digest.cpp  print_digest.h
engine/spektra-core/src/main/cpp/tests/: gen_grain_ref.py  gen_grain_sublayer_ref.py  gen_output_spaces_ref.py  gen_reference.py  grain_ref_density.spkvec  grain_ref_stats.json  grain_sublayer_ref_density.spkvec  grain_sublayer_ref_stats.json  scan_portra_input_rgb.f64  scan_portra_ref_aces2065_1.spkvec  scan_portra_ref_adobe_rgb.spkvec  scan_portra_ref_linear_srgb.spkvec  scan_portra_ref_prophoto.spkvec  scan_portra_ref_rec2020.spkvec  scan_portra_ref_srgb.spkvec  small_preview_aa_input_rgb.f64  spectral_upsampling_ref.spkvec  test_autoexposure.cpp  test_bake_lut.cpp  test_camera_uvir_e2e.cpp  test_crop_resize.cpp  test_diffusion.cpp  test_diffusion_e2e.cpp  test_downscale.cpp  test_enlarger_lut_e2e.cpp  test_filming.cpp  test_gamut_in_xy.cpp  test_gamut_out_aces.cpp  test_grain.cpp  test_grain_sublayer.cpp  test_half.cpp  test_hanatos_surface_e2e.cpp  test_highlight_boost_e2e.cpp  test_lensblur.cpp  test_lut_accel.cpp  test_np_interp.cpp  test_output_spaces.cpp  (+16 more)
lib/libraw/src/main/cpp/: CMakeLists.txt  raw_decoder.cpp  raw_decoder.h  raw_decoder_jni.cpp
lib/pngwriter/src/main/cpp/: CMakeLists.txt  png_writer.cpp  png_writer.h  png_writer_jni.cpp
lib/tiffwriter/src/main/cpp/: CMakeLists.txt  tiff_writer.cpp  tiff_writer.h  tiff_writer_jni.cpp
tools/parity/: CMakeLists.txt  README.md  cases.md  compare_main.cpp  gen_diffusion_golden.py  gen_gamut_aces_golden.py  gen_gamut_in_golden.py  gen_goldens.py  gen_lut_golden.py  gen_np_interp_golden.py  gen_print_curves_morph_golden.py  gen_small_preview_golden.py  setup_env.sh  spkvec.py  spkvec_format.md  spkvec_io.h
tools/parity/goldens/diffusion_bpm/: diffusion_out.spkvec  input_rgb.f64  manifest.json
tools/parity/goldens/lut_accel/: direct.spkvec  input_norm.f64  lut.f64  lut_out.spkvec  manifest.json
tools/parity/goldens/print_curves_morph/: manifest.json  print_density.spkvec
tools/parity/goldens/print_ektar/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json  print_density_cmy.spkvec
tools/parity/goldens/print_portra/: final_rgb.spkvec  manifest.json  print_density_cmy.spkvec
tools/parity/goldens/print_portra_bwcorr/: film_log_raw.spkvec  final_rgb.spkvec  manifest.json  print_density_cmy.spkvec
tools/parity/goldens/print_portra_evcomp/: final_rgb.spkvec  manifest.json  print_density_cmy.spkvec
tools/parity/goldens/print_portra_evcomp_nonorm/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json  print_density_cmy.spkvec
tools/parity/goldens/print_portra_preflash/: final_rgb.spkvec  manifest.json  print_density_cmy.spkvec
tools/parity/goldens/scan_diffusion/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra/: film_density_cmy.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_autoexp/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_autoexp_matrix/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_boost/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_crop/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_downscale/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_lensblur/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_nowindow/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_spatial/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_surface/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_portra_uvir/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_provia_bwcorr/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_provia_couplers/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/scan_spectral_blur/: film_density_cmy.spkvec  film_log_raw.spkvec  final_rgb.spkvec  manifest.json
tools/parity/goldens/small_preview_aa/: manifest.json  preview_rgb.spkvec
(+221 files in other folders)
